[package]
name = "exchange"
version = "0.1.0"
edition = "2024"
description = "A minimal, configuration-driven HTTP reverse proxy built with hyper and tokio."
license = "MIT"
repository = "https://github.com/shadertheory/exchange"
keywords = ["proxy", "reverse-proxy", "http", "hyper", "tokio"]
categories = ["network-programming", "web-programming", "asynchronous"]

[dependencies]
anyhow = "1.0.100"
clap = "4.5.51"
derive_more = { version = "2.0.1", features = ["full"] }
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = "0.1.18"
reqwest = "0.12.24"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full", "sync"] }
toml = "0.9.8"
